# rediscpp

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  conanfile.py  dir_49e56c817e5e54854c35e136979f97ca.html  dir_ef3b2545113449f8f25e623a543d64e3.html  dir_f08a57394fbd87e65b3af157254d24a0.html  files.html  index.html  modules.html  namespaces.html  pages.html  project-include-after.cmake  rediscpp_8hpp.html  searchdata-v1.js
.github/: clang-12.profile
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/rediscpp/: rediscpp.hpp
test/: CMakeLists.txt
test/source/: rediscpp_test.cpp
